--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="./assets/index.0660e1ab.js"></script>
-    <link rel="stylesheet" href="./assets/index.8865ca72.css">
+    <script type="module" crossorigin src="/assets/index.ebd26a2c.js"></script>
+    <link rel="stylesheet" href="/assets/index.71ee2797.css">
   </head>
   <body>
     <div id="app"></div>
