--- a/restaurantTemplate/index.html
+++ b/restaurantTemplate/index.html
@@ -22,6 +22,9 @@
                 <a href="">LOCATION</a>
                 <a href="">CHEF</a>
             </div>
+            <div class="mobile">
+                <img src="./menu_FILL1_wght400_GRAD0_opsz48.svg" alt="">
+            </div>
         </nav>
         <div class="contentContainer">
             <div class="flagContainer">
@@ -35,31 +38,58 @@
         </div>
     </header>
 
-<main>
-    <article id="food">
-        <div class="foodItem">
-            <img src="./shri-0JYC1jm1baM-unsplash.jpg" alt="">
-            <h2>wide variety of tofu meals</h2>
-        </div>
-        <div class="foodItem">
-            <img src="./jakub-dziubak-iOHJKJqO6E0-unsplash.jpg" alt="">
-            <h2>fresh sushi</h2>
-        </div>
-        <div class="foodItem">
-            <img src="./steven-indrajaya-oUobex3M4cA-unsplash.jpg" alt="">
-            <h2>noodles and ramen</h2>
-        </div>
-    </article>
+    <main>
+        <article id="food">
+            <div class="foodItem">
+                <img src="./shri-0JYC1jm1baM-unsplash.jpg" alt="">
+                <h2>wide variety of tofu meals</h2>
+            </div>
+            <div class="foodItem">
+                <img src="./jakub-dziubak-iOHJKJqO6E0-unsplash.jpg" alt="">
+                <h2>fresh sushi</h2>
+            </div>
+            <div class="foodItem">
+                <img src="./steven-indrajaya-oUobex3M4cA-unsplash.jpg" alt="">
+                <h2>noodles and ramen</h2>
+            </div>
+        </article>
 
-    <article id="chef">
-        <img src="./thomas-marban-EHK-EH1SRzQ-unsplash.jpg" alt="">
-        <div class="content">
-            <h2>Bunta Fujiwara</h2>
-            <h3>head chef</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida nulla tortor, a mollis turpis lacinia sit amet. Phasellus ullamcorper, urna sit amet lacinia venenatis, sem tellus rutrum magna, accumsan molestie leo ex non purus. Maecenas in odio vitae magna feugiat vehicula. Proin semper, enim venenatis venenatis blandit, nunc lacus tempus eros, at sodales neque lacus ut neque. </p>
-        </div>
-    </article>
-</main>
+        <article id="chef">
+            <img src="./thomas-marban-EHK-EH1SRzQ-unsplash.jpg" alt="">
+            <div class="content">
+                <h2>Bunta Fujiwara</h2>
+                <h3>head chef</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida nulla tortor, a mollis turpis
+                    lacinia sit amet. Phasellus ullamcorper, urna sit amet lacinia venenatis, sem tellus rutrum magna,
+                    accumsan molestie leo ex non purus. Maecenas in odio vitae magna feugiat vehicula. Proin semper,
+                    enim venenatis venenatis blandit, nunc lacus tempus eros, at sodales neque lacus ut neque. </p>
+            </div>
+        </article>
+        <article id="location">
+            <div class="footerSection">
+                <div class="textContainer">
+                    <img src="./location_on_FILL1_wght400_GRAD0_opsz48.svg" alt="">
+                    <p>207 Duncan Avenue New York</p>
+                </div>
+                <div class="textContainer">
+                    <img src="./call_FILL1_wght400_GRAD0_opsz48.svg" alt="">
+                    <p>917-531-9280</p>
+                </div>
+            </div>
+            <div class="footerSection">
+                <div class="textContainer timeTable">
+                    <p>mon - sat: <br>
+                        10:30 - 22:30 <br>
+                        sun: <br>
+                        11:00 - 22:30</p>
+                </div>
+            </div>
+        </article>
+    </main>
+
+    <footer>
+        <p>Copyright © 2023 FTS</p>
+    </footer>
 </body>
 
 </html>
