--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
 </html>
